<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.TransferFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fromAccount"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="88dp"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/fromAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.8"
        tools:ignore="MissingConstraints">

        <AutoCompleteTextView
            android:id="@+id/fromAccounts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/styleedtittext"
            android:focusable="false" />


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/toTheAccount"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="28dp"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/toTheAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fromAccount"
        app:layout_constraintWidth_percent="0.8"
        tools:ignore="MissingConstraints">

        <AutoCompleteTextView
            android:id="@+id/toAccounts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/styleedtittext"
            android:focusable="false" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout5"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:hint="Cумма перевода"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toTheAccount"
        app:layout_constraintWidth_percent="0.8"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dat"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="28dp"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout5"
        app:layout_constraintWidth_percent="0.8"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:focusable="false"
            android:inputType="date"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="288dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@drawable/mybutton"
        android:text="Перевести"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dat"
        app:layout_constraintWidth_percent="0.8"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>